examples/errors/syntax_keep_missing_semicolon.jc
// ================================================
// ERROR: Missing Semicolon After Keep
// Expected: [SyntaxError] Missing semicolon after 'keep' statement
// ================================================

// Missing semicolon after variable declaration
keep name = "John"
say(name);
